@startuml
skinparam classAttributeIconSize 0

class ExosOO_version1 {
{static} main(args:String[]):void
}

class BankingSystem {
transfer(amount:float, debitAccountNumber:String, creditAccountNumber:String):void

}

class Account {

accountNumber:String
balance:float

Account(accountNumber:String, balance:float)
credit(amount:float):void
debit(amount:float):void
toString():String
}

BankingSystem --> "1" Account : account1
BankingSystem --> "1" Account : account2
ExosOO_version1 .> BankingSystem : <<create>>

@enduml